<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingTop="125dp">

    <TextView
        android:id="@+id/typingBox"
        android:tag="00"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:hint="@string/typingBox"
        android:textStyle="bold"
        android:gravity="bottom|end"
        android:textSize="32sp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="20dp"/>

    <GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4">

        <Button
            android:id="@+id/buttonClear"
            android:tag="00"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#DCDCDC"
            android:text="@string/buttonClear"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="clear"/>

        <Button
            android:id="@+id/buttonPlusMinus"
            android:tag="01"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#DCDCDC"
            android:text="@string/buttonPlusMinus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="plusMinus"/>

        <Button
            android:id="@+id/buttonBackspace"
            android:tag="02"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#DCDCDC"
            android:text="@string/buttonBackspace"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="backspace"/>

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#B0E0E6"
            android:tag="03"
            android:text="@string/buttonDivide"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="operatorClick"/>

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#A9A9A9"
            android:tag="10"
            android:text="@string/button7"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="display7"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#A9A9A9"
            android:tag="11"
            android:text="@string/button8"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="display8"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#A9A9A9"
            android:tag="12"
            android:text="@string/button9"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="display9"/>

        <Button
            android:id="@+id/buttonMultiply"
            android:tag="13"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#B0E0E6"
            android:text="@string/buttonMultiply"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:onClick="operatorClick"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#A9A9A9"
            android:tag="20"
            android:text="@string/button4"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="display4"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#A9A9A9"
            android:tag="21"
            android:text="@string/button5"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="display5"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#A9A9A9"
            android:tag="22"
            android:text="@string/button6"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="display6"/>

        <Button
            android:id="@+id/buttonSubtract"
            android:tag="23"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#B0E0E6"
            android:text="@string/buttonSubtract"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:onClick="operatorClick"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#A9A9A9"
            android:tag="30"
            android:text="@string/button1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="display1"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#A9A9A9"
            android:tag="31"
            android:text="@string/button2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="display2"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#A9A9A9"
            android:tag="32"
            android:text="@string/button3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="display3"/>

        <Button
            android:id="@+id/buttonAdd"
            android:tag="33"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#B0E0E6"
            android:text="@string/buttonAdd"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:onClick="operatorClick"/>
    </GridLayout>

    <GridLayout
        android:id="@+id/lastRowButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1">

        <Button
            android:id="@+id/button0"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:background="#A9A9A9"
            android:tag="00"
            android:text="@string/button0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:typeface="normal"
            android:onClick="display0"/>

        <Button
            android:id="@+id/buttonDecimal"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#A9A9A9"
            android:tag="01"
            android:text="@string/buttonDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="decimal"/>

        <Button
            android:id="@+id/buttonEqual"
            android:tag="02"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#B0E0E6"
            android:text="@string/buttonEqual"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:onClick="equals"/>
    </GridLayout>

</LinearLayout>